	  - Correctly identify uncursed items in bags dropped on altars when hallucinating
	  - Prevent potential endless when praying and using perma hallucination
	  - Fixed crash with a configured nameempty option (found and fixed by tertium)
	  - Fixed crash in X11 inventory
	  - Fixed possible endless loop in autotravel on the Rogue level
	  - Fixed lava breath related crash at the edges of the map

	* vanilla bug fixes:
	  - C343-439: Running NetHack in a terminal window with more than 255
	              rows or columns produces display errors.
	  - C343-320: Reading a Scroll of Mail no longer violates illiterate conduct

2013-12-08  UnNetHack 5.1.0
	* Mind flayer attacks only cause physical damage and int drain
	* Wands and spells of digging are no longer restricted on maze levels
	* Sokoban luck penalty removed and added tracking of solving Sokoban
	  without any tricks
	* Monster generation increasing with turn count (from SporkHack)
	* Removed the Quest turn limit
	* Player vampire gets a charisma bonus when wearing an opera cloak (by L)
	* Some monster vampires get an opera cloak (from Slash'Em)
	* Automatically identify potions of sickness, hallucination, and speed
	  when inhaling their vapors
	* Poison gas blasts leave a trail of stinking clouds (from UnNetHackPlus)
	* Magical traps (except for magic portals and anti-magic fields) can be disarmed
	  with a wand of cancellation (based on the patch by Malcolm Ryan)
	* Applying zorkmids allows the player to flip a coin (code by Pasi Kallinen)
	* Sokoban prizes are never cursed or have negative enchantment
	* Automatically identify wand of cancellation after destroying a bag
	  of holding with it
	* Menucolors: setting a color or attribute doesn't remove a previously
	  set attribute or color (by aaxelb)
	* Regeneration only causes additional hunger when injured (by Adeon)
	* Reinstated vanilla behavior for cursed scrolls of gold detection and
	  adding some traps to the planes