@@ -137,7 +137,7 @@ OBJECT:$object[3],(53,11)
 OBJECT:$object[3],(54,11)
 OBJECT:$object[3],(55,11)
 # THE WAND OF WISHING in 1 of the 4 towers
-CONTAINER:('(',"chest"),$place[0] {
+CONTAINER:('(',"chest"),not_trapped,$place[0] {
   OBJECT:('/',"wishing")
 }
 # Prevent monsters from eating it.  (@'s never eat objects)
@@ -389,7 +389,7 @@ OBJECT:$object[1],(10,15)
 OBJECT:$object[1],(11,15)
 
 # treasure room
-CONTAINER:('(',"chest"),$place[0] {
+CONTAINER:('(',"chest"),not_trapped,$place[0] {
   OBJECT:('/',"wishing")
 }
 ENGRAVING:$place[0],burn,"Elbereth"
@@ -634,7 +634,7 @@ MONSTER:('H',"fire giant"),(36,03),peaceful
 MONSTER:('j',"ochre jelly"),(43,01),asleep
 
 # treasure
-CONTAINER:('(',"chest"),$place[0] {
+CONTAINER:('(',"chest"),not_trapped,$place[0] {
   OBJECT:('/',"wishing")
 }
 ENGRAVING:$place[0],burn,"Elbereth"
