@@ -209,7 +209,7 @@ extern int rnd_vault_freq;
 %token	<i> QUANTITY_ID BURIED_ID LOOP_ID
 %token	<i> FOR_ID TO_ID
 %token	<i> SWITCH_ID CASE_ID BREAK_ID DEFAULT_ID
-%token	<i> ERODED_ID TRAPPED_ID RECHARGED_ID INVIS_ID GREASED_ID
+%token	<i> ERODED_ID TRAPPED_STATE RECHARGED_ID INVIS_ID GREASED_ID
 %token	<i> FEMALE_ID CANCELLED_ID REVIVED_ID AVENGE_ID FLEEING_ID BLINDED_ID
 %token	<i> PARALYZED_ID STUNNED_ID CONFUSED_ID SEENTRAPS_ID ALL_ID
 %token	<i> MON_GENERATION_ID MONTYPE_ID
@@ -1695,9 +1695,9 @@ object_info	: CURSE_TYPE
 		      } else
 			  lc_error("OBJECT state can only be locked or broken.");
 		  }
-		| TRAPPED_ID
+		| TRAPPED_STATE
 		  {
-		      add_opvars(splev, "ii", 1, SP_O_V_TRAPPED);
+		      add_opvars(splev, "ii", $1, SP_O_V_TRAPPED);
 		      $$ = 0x0400;
 		  }
 		| RECHARGED_ID ':' integer_or_var
